--- a/src/containers/Login/index.module.scss
+++ b/src/containers/Login/index.module.scss
@@ -61,3 +61,11 @@
     margin-bottom: 10px;
   }
 }
+
+.sbui-btn {
+  background-color: #f58f98 !important
+}
+button{
+  background-color: #f58f98 !important
+  
+}
