--- a/src/containers/Login/index.module.scss
+++ b/src/containers/Login/index.module.scss
@@ -97,16 +97,6 @@
   font-size: 12px;
   color: $pink !important;
 }
-
-.sbui-btn {
-  background-color: #f58f98 !important
-}
-button{
-  background-color: #f58f98 !important
-  
-}
-
-link{
-  color: #f58f98 !important
-  
+label {
+  color: #fff !important; 
 }
